fix Browser Cursor and VSCode Cursor Overlapping Issue issue#244087

--- a/src/vs/editor/browser/controller/editContext/textArea/textAreaEditContext.css
+++ b/src/vs/editor/browser/controller/editContext/textArea/textAreaEditContext.css
@@ -13,7 +13,6 @@
 	resize: none;
 	border: none;
 	overflow: hidden;
-	caret-color: transparent;
 	color: transparent;
 	background-color: transparent;
 	z-index: -10;
